// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Droplist matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Droplist
    classes={
      Object {
        "block": "block",
        "bold": "bold",
        "group": "group",
        "item": "item",
        "right": "right",
      }
    }
    filter={true}
    groupIdKey="id"
    groupItemsKey="items"
    groupNameKey="text"
    groups={false}
    itemIdKey="id"
    itemTextKey="text"
    itemTextRightKey="textRight"
    items={
      Array [
        Object {
          "id": 1,
          "text": "Administrador",
          "textRight": "(222)",
        },
        Object {
          "id": 2,
          "text": "Administrador Sr",
          "textRight": "(134)",
        },
        Object {
          "id": 3,
          "text": "Administrador Jr",
          "textRight": "(52)",
        },
        Object {
          "id": 4,
          "text": "Administrar",
          "textRight": "(6)",
        },
      ]
    }
    term=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="item"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
        >
          <Jss(Text)
            tag="p"
          >
            
            <span
              className="bold"
            >
              
            </span>
            Administrador
          </Jss(Text)>
          <span
            className="right"
          >
            <Jss(Text)
              mid={true}
              tag="span"
            >
              (222)
            </Jss(Text)>
          </span>
        </div>,
        <div
          className="item"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
        >
          <Jss(Text)
            tag="p"
          >
            
            <span
              className="bold"
            >
              
            </span>
            Administrador Sr
          </Jss(Text)>
          <span
            className="right"
          >
            <Jss(Text)
              mid={true}
              tag="span"
            >
              (134)
            </Jss(Text)>
          </span>
        </div>,
        <div
          className="item"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
        >
          <Jss(Text)
            tag="p"
          >
            
            <span
              className="bold"
            >
              
            </span>
            Administrador Jr
          </Jss(Text)>
          <span
            className="right"
          >
            <Jss(Text)
              mid={true}
              tag="span"
            >
              (52)
            </Jss(Text)>
          </span>
        </div>,
        <div
          className="item"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
        >
          <Jss(Text)
            tag="p"
          >
            
            <span
              className="bold"
            >
              
            </span>
            Administrar
          </Jss(Text)>
          <span
            className="right"
          >
            <Jss(Text)
              mid={true}
              tag="span"
            >
              (6)
            </Jss(Text)>
          </span>
        </div>,
      ],
      "className": "block",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Jss(Text)
              tag="p"
            >
              
              <span
                className="bold"
              >
                
              </span>
              Administrador
            </Jss(Text)>,
            <span
              className="right"
            >
              <Jss(Text)
                mid={true}
                tag="span"
              >
                (222)
              </Jss(Text)>
            </span>,
          ],
          "className": "item",
          "onClick": [Function],
          "onMouseDown": [Function],
          "onMouseUp": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "",
                <span
                  className="bold"
                >
                  
                </span>,
                "Administrador",
              ],
              "tag": "p",
            },
            "ref": null,
            "rendered": Array [
              "",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "",
                  "className": "bold",
                },
                "ref": null,
                "rendered": "",
                "type": "span",
              },
              "Administrador",
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Jss(Text)
                mid={true}
                tag="span"
              >
                (222)
              </Jss(Text)>,
              "className": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "(222)",
                "mid": true,
                "tag": "span",
              },
              "ref": null,
              "rendered": "(222)",
              "type": [Function],
            },
            "type": "span",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Jss(Text)
              tag="p"
            >
              
              <span
                className="bold"
              >
                
              </span>
              Administrador Sr
            </Jss(Text)>,
            <span
              className="right"
            >
              <Jss(Text)
                mid={true}
                tag="span"
              >
                (134)
              </Jss(Text)>
            </span>,
          ],
          "className": "item",
          "onClick": [Function],
          "onMouseDown": [Function],
          "onMouseUp": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "",
                <span
                  className="bold"
                >
                  
                </span>,
                "Administrador Sr",
              ],
              "tag": "p",
            },
            "ref": null,
            "rendered": Array [
              "",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "",
                  "className": "bold",
                },
                "ref": null,
                "rendered": "",
                "type": "span",
              },
              "Administrador Sr",
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Jss(Text)
                mid={true}
                tag="span"
              >
                (134)
              </Jss(Text)>,
              "className": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "(134)",
                "mid": true,
                "tag": "span",
              },
              "ref": null,
              "rendered": "(134)",
              "type": [Function],
            },
            "type": "span",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "3",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Jss(Text)
              tag="p"
            >
              
              <span
                className="bold"
              >
                
              </span>
              Administrador Jr
            </Jss(Text)>,
            <span
              className="right"
            >
              <Jss(Text)
                mid={true}
                tag="span"
              >
                (52)
              </Jss(Text)>
            </span>,
          ],
          "className": "item",
          "onClick": [Function],
          "onMouseDown": [Function],
          "onMouseUp": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "",
                <span
                  className="bold"
                >
                  
                </span>,
                "Administrador Jr",
              ],
              "tag": "p",
            },
            "ref": null,
            "rendered": Array [
              "",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "",
                  "className": "bold",
                },
                "ref": null,
                "rendered": "",
                "type": "span",
              },
              "Administrador Jr",
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Jss(Text)
                mid={true}
                tag="span"
              >
                (52)
              </Jss(Text)>,
              "className": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "(52)",
                "mid": true,
                "tag": "span",
              },
              "ref": null,
              "rendered": "(52)",
              "type": [Function],
            },
            "type": "span",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "4",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Jss(Text)
              tag="p"
            >
              
              <span
                className="bold"
              >
                
              </span>
              Administrar
            </Jss(Text)>,
            <span
              className="right"
            >
              <Jss(Text)
                mid={true}
                tag="span"
              >
                (6)
              </Jss(Text)>
            </span>,
          ],
          "className": "item",
          "onClick": [Function],
          "onMouseDown": [Function],
          "onMouseUp": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "",
                <span
                  className="bold"
                >
                  
                </span>,
                "Administrar",
              ],
              "tag": "p",
            },
            "ref": null,
            "rendered": Array [
              "",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "",
                  "className": "bold",
                },
                "ref": null,
                "rendered": "",
                "type": "span",
              },
              "Administrar",
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Jss(Text)
                mid={true}
                tag="span"
              >
                (6)
              </Jss(Text)>,
              "className": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "(6)",
                "mid": true,
                "tag": "span",
              },
              "ref": null,
              "rendered": "(6)",
              "type": [Function],
            },
            "type": "span",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="item"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
          >
            <Jss(Text)
              tag="p"
            >
              
              <span
                className="bold"
              >
                
              </span>
              Administrador
            </Jss(Text)>
            <span
              className="right"
            >
              <Jss(Text)
                mid={true}
                tag="span"
              >
                (222)
              </Jss(Text)>
            </span>
          </div>,
          <div
            className="item"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
          >
            <Jss(Text)
              tag="p"
            >
              
              <span
                className="bold"
              >
                
              </span>
              Administrador Sr
            </Jss(Text)>
            <span
              className="right"
            >
              <Jss(Text)
                mid={true}
                tag="span"
              >
                (134)
              </Jss(Text)>
            </span>
          </div>,
          <div
            className="item"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
          >
            <Jss(Text)
              tag="p"
            >
              
              <span
                className="bold"
              >
                
              </span>
              Administrador Jr
            </Jss(Text)>
            <span
              className="right"
            >
              <Jss(Text)
                mid={true}
                tag="span"
              >
                (52)
              </Jss(Text)>
            </span>
          </div>,
          <div
            className="item"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
          >
            <Jss(Text)
              tag="p"
            >
              
              <span
                className="bold"
              >
                
              </span>
              Administrar
            </Jss(Text)>
            <span
              className="right"
            >
              <Jss(Text)
                mid={true}
                tag="span"
              >
                (6)
              </Jss(Text)>
            </span>
          </div>,
        ],
        "className": "block",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Jss(Text)
                tag="p"
              >
                
                <span
                  className="bold"
                >
                  
                </span>
                Administrador
              </Jss(Text)>,
              <span
                className="right"
              >
                <Jss(Text)
                  mid={true}
                  tag="span"
                >
                  (222)
                </Jss(Text)>
              </span>,
            ],
            "className": "item",
            "onClick": [Function],
            "onMouseDown": [Function],
            "onMouseUp": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "",
                  <span
                    className="bold"
                  >
                    
                  </span>,
                  "Administrador",
                ],
                "tag": "p",
              },
              "ref": null,
              "rendered": Array [
                "",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "",
                    "className": "bold",
                  },
                  "ref": null,
                  "rendered": "",
                  "type": "span",
                },
                "Administrador",
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Jss(Text)
                  mid={true}
                  tag="span"
                >
                  (222)
                </Jss(Text)>,
                "className": "right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "(222)",
                  "mid": true,
                  "tag": "span",
                },
                "ref": null,
                "rendered": "(222)",
                "type": [Function],
              },
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Jss(Text)
                tag="p"
              >
                
                <span
                  className="bold"
                >
                  
                </span>
                Administrador Sr
              </Jss(Text)>,
              <span
                className="right"
              >
                <Jss(Text)
                  mid={true}
                  tag="span"
                >
                  (134)
                </Jss(Text)>
              </span>,
            ],
            "className": "item",
            "onClick": [Function],
            "onMouseDown": [Function],
            "onMouseUp": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "",
                  <span
                    className="bold"
                  >
                    
                  </span>,
                  "Administrador Sr",
                ],
                "tag": "p",
              },
              "ref": null,
              "rendered": Array [
                "",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "",
                    "className": "bold",
                  },
                  "ref": null,
                  "rendered": "",
                  "type": "span",
                },
                "Administrador Sr",
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Jss(Text)
                  mid={true}
                  tag="span"
                >
                  (134)
                </Jss(Text)>,
                "className": "right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "(134)",
                  "mid": true,
                  "tag": "span",
                },
                "ref": null,
                "rendered": "(134)",
                "type": [Function],
              },
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "3",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Jss(Text)
                tag="p"
              >
                
                <span
                  className="bold"
                >
                  
                </span>
                Administrador Jr
              </Jss(Text)>,
              <span
                className="right"
              >
                <Jss(Text)
                  mid={true}
                  tag="span"
                >
                  (52)
                </Jss(Text)>
              </span>,
            ],
            "className": "item",
            "onClick": [Function],
            "onMouseDown": [Function],
            "onMouseUp": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "",
                  <span
                    className="bold"
                  >
                    
                  </span>,
                  "Administrador Jr",
                ],
                "tag": "p",
              },
              "ref": null,
              "rendered": Array [
                "",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "",
                    "className": "bold",
                  },
                  "ref": null,
                  "rendered": "",
                  "type": "span",
                },
                "Administrador Jr",
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Jss(Text)
                  mid={true}
                  tag="span"
                >
                  (52)
                </Jss(Text)>,
                "className": "right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "(52)",
                  "mid": true,
                  "tag": "span",
                },
                "ref": null,
                "rendered": "(52)",
                "type": [Function],
              },
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "4",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Jss(Text)
                tag="p"
              >
                
                <span
                  className="bold"
                >
                  
                </span>
                Administrar
              </Jss(Text)>,
              <span
                className="right"
              >
                <Jss(Text)
                  mid={true}
                  tag="span"
                >
                  (6)
                </Jss(Text)>
              </span>,
            ],
            "className": "item",
            "onClick": [Function],
            "onMouseDown": [Function],
            "onMouseUp": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "",
                  <span
                    className="bold"
                  >
                    
                  </span>,
                  "Administrar",
                ],
                "tag": "p",
              },
              "ref": null,
              "rendered": Array [
                "",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "",
                    "className": "bold",
                  },
                  "ref": null,
                  "rendered": "",
                  "type": "span",
                },
                "Administrar",
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Jss(Text)
                  mid={true}
                  tag="span"
                >
                  (6)
                </Jss(Text)>,
                "className": "right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "(6)",
                  "mid": true,
                  "tag": "span",
                },
                "ref": null,
                "rendered": "(6)",
                "type": [Function],
              },
              "type": "span",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Droplist styles matches the snapshot 1`] = `
Object {
  "block": Object {
    "background": "#ffffff",
    "border": "1px solid #dddddd",
    "borderRadius": 4,
    "overflow": "hidden",
  },
  "bold": Object {
    "fontWeight": "700",
  },
  "group": Object {
    "padding": Array [
      16,
      16,
      4,
    ],
  },
  "item": Object {
    "&:hover": Object {
      "background": "#fafafa",
    },
    "cursor": "pointer",
    "display": "flex",
    "justifyContent": "space-between",
    "padding": Array [
      8,
      16,
    ],
    "transition": "0.1s all",
  },
  "right": Object {
    "float": "right",
    "transition": "0.1s all",
  },
}
`;

exports[`DroplistJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(Droplist)
    filter={true}
    groupIdKey="id"
    groupItemsKey="items"
    groupNameKey="text"
    groups={false}
    itemIdKey="id"
    itemTextKey="text"
    itemTextRightKey="textRight"
    items={
      Array [
        Object {
          "id": 1,
          "text": "Administrador",
          "textRight": "(222)",
        },
        Object {
          "id": 2,
          "text": "Administrador Sr",
          "textRight": "(134)",
        },
        Object {
          "id": 3,
          "text": "Administrador Jr",
          "textRight": "(52)",
        },
        Object {
          "id": 4,
          "text": "Administrar",
          "textRight": "(6)",
        },
      ]
    }
    term=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "block": "Droplist-block-0-1-1",
        "bold": "Droplist-bold-0-1-5",
        "group": "Droplist-group-0-1-2",
        "item": "Droplist-item-0-1-3",
        "right": "Droplist-right-0-1-4",
      },
      "filter": true,
      "groupIdKey": "id",
      "groupItemsKey": "items",
      "groupNameKey": "text",
      "groups": false,
      "itemIdKey": "id",
      "itemTextKey": "text",
      "itemTextRightKey": "textRight",
      "items": Array [
        Object {
          "id": 1,
          "text": "Administrador",
          "textRight": "(222)",
        },
        Object {
          "id": 2,
          "text": "Administrador Sr",
          "textRight": "(134)",
        },
        Object {
          "id": 3,
          "text": "Administrador Jr",
          "textRight": "(52)",
        },
        Object {
          "id": 4,
          "text": "Administrar",
          "textRight": "(6)",
        },
      ],
      "term": "",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "block": "Droplist-block-0-1-1",
          "bold": "Droplist-bold-0-1-5",
          "group": "Droplist-group-0-1-2",
          "item": "Droplist-item-0-1-3",
          "right": "Droplist-right-0-1-4",
        },
        "filter": true,
        "groupIdKey": "id",
        "groupItemsKey": "items",
        "groupNameKey": "text",
        "groups": false,
        "itemIdKey": "id",
        "itemTextKey": "text",
        "itemTextRightKey": "textRight",
        "items": Array [
          Object {
            "id": 1,
            "text": "Administrador",
            "textRight": "(222)",
          },
          Object {
            "id": 2,
            "text": "Administrador Sr",
            "textRight": "(134)",
          },
          Object {
            "id": 3,
            "text": "Administrador Jr",
            "textRight": "(52)",
          },
          Object {
            "id": 4,
            "text": "Administrar",
            "textRight": "(6)",
          },
        ],
        "term": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
